--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,5 @@ license = {text = "MIT"}
 distribution = false
 
 [tool.pdm.scripts]
-dev = "python3 src/main.py"
-start = "gunicorn -w 4 -b 127.0.0.1:5000 main:app"
+dev = "python3 src/main.py -- --dev"
+start = "gunicorn --chdir src --bind 0.0.0.0:5000 main:app"
